@@ -3,7 +3,9 @@ package src;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -14,23 +16,24 @@ public class TriviaQuiz {
     }
 
     public static void runQuiz() throws Exception {
-        // API URL（地理カテゴリで1問取得、選択式）
         String apiUrl = "https://opentdb.com/api.php?amount=1&category=22&type=multiple";
 
-        // HTTP GETリクエスト
-        URL url = new URL(apiUrl);
+        // URIを経由してURLを作成（Java 20以降の推奨方法）
+        URI uri = new URI(apiUrl);
+        URL url = uri.toURL();
+
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("GET");
 
         StringBuilder json = new StringBuilder();
-        try (BufferedReader in = new BufferedReader(new InputStreamReader(conn.getInputStream()))) {
+        try (BufferedReader in = new BufferedReader(
+                new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
             String line;
             while ((line = in.readLine()) != null) {
                 json.append(line);
             }
         }
 
-        // 問題を抽出（正規表現で抽出）
         Pattern questionPattern = Pattern.compile("\"question\":\"(.*?)\"");
         Pattern correctPattern = Pattern.compile("\"correct_answer\":\"(.*?)\"");
         Pattern incorrectPattern = Pattern.compile("\"incorrect_answers\":\\[(.*?)\\]");
@@ -44,7 +47,6 @@ public class TriviaQuiz {
             String correct = htmlUnescape(correctMatcher.group(1));
             String incorrectRaw = incorrectMatcher.group(1);
 
-            // 不正解選択肢を配列に
             List<String> options = new ArrayList<>();
             options.add(correct);
 
@@ -53,10 +55,8 @@ public class TriviaQuiz {
                 options.add(htmlUnescape(optionMatcher.group(1)));
             }
 
-            // シャッフルしてランダム配置
             Collections.shuffle(options);
 
-            // 表示
             System.out.println("地理クイズ");
             System.out.print("問題: ");
             MyMemoryTranslateExample.printTranslation(question, "en", "ja");
@@ -65,23 +65,27 @@ public class TriviaQuiz {
                 MyMemoryTranslateExample.printTranslation(options.get(i), "en", "ja");
             }
 
-            // ユーザーの回答を受け取る
             System.out.print("あなたの答え（番号で入力）: ");
-            Scanner scanner = new Scanner(System.in);
-            int userChoice = scanner.nextInt();
-            String selectedAnswer = options.get(userChoice - 1);
+            try (Scanner scanner = new Scanner(System.in)) {
+                int userChoice = scanner.nextInt();
+                if (userChoice < 1 || userChoice > options.size()) {
+                    System.out.println("無効な番号です。");
+                    return;
+                }
+                String selectedAnswer = options.get(userChoice - 1);
 
-            if (selectedAnswer.equals(correct)) {
-                MyMemoryTranslateExample.printTranslation("Correct!", "en", "ja");
-            } else {
-                MyMemoryTranslateExample.printTranslation("Incorrect. The correct answer is: " + correct, "en", "ja");
+                if (selectedAnswer.equals(correct)) {
+                    MyMemoryTranslateExample.printTranslation("Correct!", "en", "ja");
+                } else {
+                    MyMemoryTranslateExample.printTranslation("Incorrect. The correct answer is: " + correct, "en",
+                            "ja");
+                }
             }
         } else {
             MyMemoryTranslateExample.printTranslation("Failed to get quiz.", "en", "ja");
         }
     }
 
-    // HTMLエスケープを処理する補助メソッド
     public static String htmlUnescape(String s) {
         return s.replace("&quot;", "\"")
                 .replace("&#039;", "'")
